[gd_scene load_steps=11 format=3 uid="uid://bwa6y7wtxewj2"]

[ext_resource type="Script" uid="uid://bombasrnoko1y" path="res://scripts/main_game.gd" id="1_72e8q"]
[ext_resource type="PackedScene" uid="uid://bj2rtxodhdnh0" path="res://scenes/mountain_test_3.tscn" id="2_70vka"]
[ext_resource type="PackedScene" uid="uid://2dlmenvee0k8" path="res://scenes/setting_menu.tscn" id="2_d2op2"]
[ext_resource type="PackedScene" uid="uid://d26qs8etihkmt" path="res://scenes/player_3d.tscn" id="4_ygxny"]
[ext_resource type="PackedScene" uid="uid://brf05vc778n02" path="res://scenes/lightning_manager.tscn" id="5_wi4c7"]
[ext_resource type="Script" uid="uid://dn7gkaax7onba" path="res://scripts/setting_menu_canva.gd" id="5_ygxny"]
[ext_resource type="PackedScene" uid="uid://ve80b6j2o8vl" path="res://scenes/end_game_screen.tscn" id="7_wi4c7"]
[ext_resource type="PackedScene" uid="uid://b13cuye6q4cjr" path="res://scenes/battery_pack.tscn" id="8_70vka"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ygxny"]
size = Vector3(12.2329, 3.1134, 22.6741)

[sub_resource type="BoxShape3D" id="BoxShape3D_wi4c7"]
size = Vector3(3714.17, 15.3416, 4761.74)

[node name="MainGame" type="Node3D" node_paths=PackedStringArray("player", "finish_line_area", "end_game_screen")]
script = ExtResource("1_72e8q")
player = NodePath("Player3D")
finish_line_area = NodePath("FinishLineArea")
end_game_screen = NodePath("EndGameScreen")

[node name="MountainTest3" parent="." instance=ExtResource("2_70vka")]

[node name="LightningManager" parent="." instance=ExtResource("5_wi4c7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.7489, 9.53674e-07, 6.74067)

[node name="Player3D" parent="." instance=ExtResource("4_ygxny")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 301.555, 1497.71, -2339.86)

[node name="MenuCanva" type="CanvasLayer" parent="." node_paths=PackedStringArray("setting_menu")]
script = ExtResource("5_ygxny")
setting_menu = NodePath("SettingMenu")

[node name="PanelContainer" type="PanelContainer" parent="MenuCanva"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="SettingMenu" parent="MenuCanva" instance=ExtResource("2_d2op2")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="FinishLineArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.4041, 1622.35, -1684.72)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FinishLineArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.72682, -0.593018, 12.2441)
shape = SubResource("BoxShape3D_ygxny")

[node name="DeathArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 229.8, 1423.34, -2273.01)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeathArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 506.182, 7.17078, 1894.96)
shape = SubResource("BoxShape3D_wi4c7")

[node name="EndGameScreen" parent="." instance=ExtResource("7_wi4c7")]
visible = false

[node name="BatteryPack" parent="." instance=ExtResource("8_70vka")]
transform = Transform3D(0.928635, 0.370995, 0, -0.370995, 0.928635, 0, 0, 0, 1, 165.671, 1544.33, -1841.27)

[node name="BatteryPack2" parent="." instance=ExtResource("8_70vka")]
transform = Transform3D(0.243409, -0.234163, -0.941233, -0.297129, 0.905761, -0.302178, 0.923291, 0.35322, 0.150894, 313.098, 1513.11, -2145.02)

[connection signal="body_entered" from="FinishLineArea" to="." method="_on_finish_line_area_body_entered"]
[connection signal="body_entered" from="DeathArea" to="." method="_on_death_area_body_entered"]
[connection signal="restart_pressed" from="EndGameScreen" to="." method="_on_end_game_screen_restart_pressed"]
[connection signal="battery_replenish" from="BatteryPack" to="." method="_on_battery_pack_battery_replenish"]
[connection signal="battery_replenish" from="BatteryPack2" to="." method="_on_battery_pack_2_battery_replenish"]
